[package]
name = "livox_hap_driver"
version = "0.1.1"
authors = ["YinMo19 <me@yinmo19.top>"]
edition = "2021"

[[bin]]
name = "livox_hap_driver_node"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
tokio = { version = "1", features = ["full"] }
# tokio-util = { version = "0.7", features = ["udp"] }
crc = "3.2.1"
byteorder = "1.5.0"
std_msgs = "*"
sensor_msgs = "*"
builtin_interfaces = "*"

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"
