<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_hap_driver</name>
  <version>0.0.1</version>
  <description>A self-realized driver for Livox HAP devices.</description>
  <maintainer email="me@yinmo19.top">YinMo19</maintainer>
  <license>Apache License 2.0</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rclrs</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>rosidl_runtime_rs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
